fix: apply `table-layout: fixed;` to prevent table overflow from parent element

--- a/src/resources/sass/component/_table.scss
+++ b/src/resources/sass/component/_table.scss
@@ -9,6 +9,7 @@
   border-collapse: collapse;
   text-align: left;
   width: 100%;
+  table-layout: fixed;
 }
 
 .table-header {
